--- a/conf/ds-discover-behaviour.yaml
+++ b/conf/ds-discover-behaviour.yaml
@@ -9,22 +9,26 @@
 #
 #
 config:
-  limits:
-    min: 10
-    max: 100
-  mylist:
-    - Hello
-    - World
-    - from
-    - java-template
 
-# The entries below are just place holders.
-#  
-# There should be a corresponding `-environment.yaml`-file with the structure below, but with real values.
-# The entries in the environment-YAML will override the ones in the behaviour-YAML. The sole purpose of having the
-# structure in the behaviour-YAML is to document what needs to be defined in the environment.
-  backend:
-   db: 'http://placeholdermachine:8090/foobar/'
-   user: 'placeholder_dbuser'
-   password: 'placeholder_dbpassword'
-                                                                                                                                                                                           
+  autoupdate:
+    enabled: true
+    intervalms: 60000
+
+  solr:
+    # Test purpose only in ds-discover-behaviour.yaml. Override in environment configuration.
+    collections:
+      # Keys are collection names
+
+      # The ds-sample below uses the default setup for https://github.com/kb-dk/ds-solr/ on localhost
+      - ds: # http://localhost:10007/solr/ds/select?q=foo
+          # The Solr server, including port
+          # Mandatory
+          server: 'http://localhost:10007'
+          # The path for the Solr service
+          # Optional. Default is 'solr'
+          path: 'solr'
+          # The Solr collection ID
+          # Mandatory. Typically the same as the abstract collection name
+          collection: 'ds'
+          # TODO: Default params
+
