--- a/conf/java-webapp-environment.yaml.sample
+++ b/conf/java-webapp-environment.yaml.sample
@@ -12,8 +12,19 @@
 
 config:
 
-  # Production machine setup
-  backend:
-    db: 'http://realmachine:8090/foobar/'
-    user: 'real_dbuser'
-    password: 'real_dbpassword'
+  solr:
+    collections:
+      # Keys are collection names
+
+      # The ds-sample below uses the default setup for https://github.com/kb-dk/ds-solr/ on localhost
+      - ds: # http://localhost:10007/solr/ds/select?q=foo
+          # The Solr server, including port
+          # Mandatory
+          server: 'http://localhost:10007'
+          # The path for the Solr service
+          # Optional. Default is 'solr'
+          path: 'solr'
+          # The Solr collection ID
+          # Mandatory. Typically the same as the abstract collection name
+          collection: 'ds'
+          # TODO: Default params
