--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,14 @@
             <version>2.10.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.openapitools/jackson-databind-nullable -->
+        <!--  Used to generate the client for ds-license-->
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>jackson-databind-nullable</artifactId>
+            <version>0.2.2</version>
+        </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
@@ -397,7 +405,70 @@
                     </configOptions>
                     <packageName>${project.package}</packageName>
                 </configuration>
+              
+                <dependencies>
+                    <dependency>
+                        <!-- This is a dependency here, as we need the ds-storage-openapi_v1.yaml on build time and no more-->
+                        <groupId>dk.kb.storage</groupId>
+                        <artifactId>ds-storage</artifactId>
+                        <version>1.2-SNAPSHOT</version>
+                        <type>jar</type>
+                        <classifier>classes</classifier>
+                        <exclusions>
+                            <!-- We really just need the ds-storage-openapi_v1.yaml ..-->
+                            <exclusion>
+                                <groupId>*</groupId>
+                                <artifactId>*</artifactId>
+                            </exclusion>
+                        </exclusions>
+                    </dependency>
+                </dependencies>
+
+              
                 <executions>
+
+
+                   <!-- Client for the backend -->
+                    <execution>
+                        <id>Generate client for the backend</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Loaded from dependency above-->                                       
+                            <inputSpec>ds-storage-openapi_v1.yaml</inputSpec>
+
+                            <generatorName>java</generatorName>
+                            <library>native</library>
+
+                            <!-- Do not generate doc or tests for this client, we will handle this ourselves-->
+                            <generateApiTests>false</generateApiTests>
+                            <generateApiDocumentation>false</generateApiDocumentation>
+                            <generateModelTests>false</generateModelTests>
+                            <generateModelDocumentation>false</generateModelDocumentation>
+
+                            <!-- Ensure ONLY the ApiClient and supporting classes are created, not the gradle mess-->
+                            <generateSupportingFiles>true</generateSupportingFiles>
+                            <supportingFilesToGenerate>ApiClient.java,ApiException.java,Configuration.java,Pair.java
+                            </supportingFilesToGenerate>
+
+                            <!-- Do NOT use the customised templates as they are only for the webservice part, not the client-->
+                            <!-- Hacked by Asger by setting to an existing folder without templates -->
+                            <templateDirectory>src/main/</templateDirectory>
+                            <packageName>${project.package}.backend</packageName>
+                            <configOptions>
+                                <apiPackage>${project.package}.backend.api.v1</apiPackage>
+                                <modelPackage>${project.package}.backend.model.v1</modelPackage>
+                                <invokerPackage>${project.package}.backend.invoker.v1</invokerPackage>
+
+                                <sourceFolder>target/generated-sources</sourceFolder>
+                                <implFolder>target/generated-sources</implFolder>
+
+                            </configOptions>
+                        </configuration>
+                    </execution>
+
+
 
                     <!-- Version 1 -->
                     <!-- When a new version is needed, make a copy of three v1-related executions below, then change
