--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,20 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Client for ds-license. This will also require the org.openapitools dependency-->
+      <dependency>
+        <groupId>dk.kb.license</groupId>
+        <artifactId>ds-license</artifactId>
+          <version>1.0-SNAPSHOT</version>
+          <type>jar</type>
+          <classifier>classes</classifier>
+          <exclusions>
+            <exclusion>
+              <groupId>*</groupId>
+              <artifactId>*</artifactId>
+            </exclusion>
+        </exclusions>
+      </dependency>
 
         <!-- Apache CXF and servlet stuff -->
         <dependency>
@@ -451,72 +465,13 @@
                     <packageName>${project.package}</packageName>
                 </configuration>
               
-                <dependencies>
-                    <dependency>
-                        <!-- This is a dependency here, as we need the ds-license-openapi_v1.yaml on build time and no more-->
-                        <groupId>dk.kb.license</groupId>
-                        <artifactId>ds-license</artifactId>
-                        <version>1.0-SNAPSHOT</version>
-                        <type>jar</type>
-                        <classifier>classes</classifier>
-                        <exclusions>
-                            <!-- We really just need the ds-license-openapi_v1.yaml ..-->
-                            <exclusion>
-                                <groupId>*</groupId>
-                                <artifactId>*</artifactId>
-                            </exclusion>
-                        </exclusions>
-                    </dependency>
-                </dependencies>
+
 
               
                 <executions>
 
 
-                   <!-- Client for the backend -->
-                    <execution>
-                        <id>Generate client for the backend</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <!-- Loaded from dependency above-->                                       
-                            <inputSpec>ds-license-openapi_v1.yaml</inputSpec>
-                          
-
-
-                            <generatorName>java</generatorName>
-                            <library>native</library>
-
-                            <!-- Do not generate doc or tests for this client, we will handle this ourselves-->
-                            <generateApiTests>false</generateApiTests>
-                            <generateApiDocumentation>false</generateApiDocumentation>
-                            <generateModelTests>false</generateModelTests>
-                            <generateModelDocumentation>false</generateModelDocumentation>
-
-                            <!-- Ensure ONLY the ApiClient and supporting classes are created, not the gradle mess-->
-                            <generateSupportingFiles>true</generateSupportingFiles>
-                            <supportingFilesToGenerate>ApiClient.java,ApiException.java,Configuration.java,Pair.java
-                            </supportingFilesToGenerate>
-
-                            <!-- Do NOT use the customised templates as they are only for the webservice part, not the client-->
-                            <!-- Hacked by Asger by setting to an existing folder without templates -->
-                            <templateDirectory>src/main/</templateDirectory>
-                            <packageName>${project.package}.backend</packageName>
-                            <configOptions>
-                                <apiPackage>${project.package}.backend.api.v1</apiPackage>
-                                <modelPackage>${project.package}.backend.model.v1</modelPackage>
-                                <invokerPackage>${project.package}.backend.invoker.v1</invokerPackage>
-
-                                <sourceFolder>target/generated-sources</sourceFolder>
-                                <implFolder>target/generated-sources</implFolder>
-
-                            </configOptions>
-                        </configuration>
-                    </execution>
-
-
-
+                
                     <!-- Version 1 -->
                     <!-- When a new version is needed, make a copy of three v1-related executions below, then change
                          v1 to v2 in the copy.
