Add permissive option allowing for arbitrary Solr parameter
If the Solr config is set to permissive, all parameters are passed through to Solr.
If it is not permissive, issuing a Solr call with any non-vetted parameters will
result in an exception.

The default is false and this should only be enabled on local or devel for decoupling
ad hoc frontend tweaking of Solr calls from enabling of said tweaks in ds-discover.
The non-vetted arguments are logged on `warn` for later incorporation in ds-discover.

--- a/conf/ds-discover-behaviour.yaml
+++ b/conf/ds-discover-behaviour.yaml
@@ -14,6 +14,12 @@ config:
     max: 10000
 
   solr:
+    # If permissive is false, only vetted Solr parameters are accepted
+    # If permissive is true, all Solr parameters are passed on and non-vetted parameters are logged
+    # Intended for development purposes.
+    # WARNING: This should never be true in production.
+    permissive: false
+
     # Test purpose only in ds-discover-behaviour.yaml. Override in environment configuration.
     collections:
       # Keys are collection names
