--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
       <dependency>
         <groupId>dk.kb.license</groupId>
         <artifactId>ds-license</artifactId>
-          <version>1.2-SNAPSHOT</version>
+          <version>1.3.0</version>
           <type>jar</type>
           <classifier>classes</classifier>
           <exclusions>
